<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragment.detail.DetailFragment">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/detail_top_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/todo" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="175dp"
            android:background="@drawable/top_round_shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/menuBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/more_menu2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/hello"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backBtn" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView6"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="40dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintCircleRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menuBtn"
            app:shapeAppearanceOverlay="@style/roundedCornerImageStyle"
            app:srcCompat="@drawable/icon" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/separate_line"
            app:layout_constraintEnd_toStartOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/create_a_task"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView7"
            app:layout_constraintStart_toStartOf="@+id/imageView7"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/task_priority"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/titleEditText"
            app:layout_constraintTop_toBottomOf="@+id/titleEditText" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/choose_date"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/priorityhightBtn"
            app:layout_constraintTop_toBottomOf="@+id/priorityMiddleBtn" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/choose_tag"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/dateBtn"
            app:layout_constraintTop_toBottomOf="@+id/dateBtn" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/task_description"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/tagContainer" />

        <TextView
            android:id="@+id/addTagBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/underline_add"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/task_title"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/round_solid_shape"
            android:backgroundTint="#F6F8FA"
            android:hint="@string/task_name"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:autofillHints=""
            android:inputType="text" />

        <TextView
            android:id="@+id/priorityhightBtn"
            android:layout_width="87dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/round_solid_shape"
            android:backgroundTint="#EB3F3F"
            android:gravity="center"
            android:text="@string/high"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/priorityMiddleBtn"
            android:layout_width="87dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/round_solid_shape"
            android:backgroundTint="#EBE43F"
            android:gravity="center"
            android:text="@string/middle"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/priorityhightBtn"
            app:layout_constraintTop_toTopOf="@+id/priorityhightBtn" />

        <TextView
            android:id="@+id/priorityLowBtn"
            android:layout_width="87dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/round_solid_shape"
            android:backgroundTint="#3FEBA2"
            android:gravity="center"
            android:text="@string/low"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/priorityMiddleBtn"
            app:layout_constraintTop_toTopOf="@+id/priorityMiddleBtn" />

        <TextView
            android:id="@+id/dateBtn"
            android:layout_width="150dp"
            android:layout_height="29dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/round_solid_shape"
            android:backgroundTint="#F6F8FA"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/select_a_date"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:drawableStartCompat="@drawable/bag_dark" />

        <EditText
            android:id="@+id/descriptionTextView"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:background="#EFF0F2"
            android:gravity="start"
            android:padding="8dp"
            android:hint="@string/task_description"
            android:textColorHint="@color/light_gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            android:autofillHints=""
            android:inputType="text" />


        <LinearLayout
            android:id="@+id/optionBtnContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/menuBtn"
            app:layout_constraintEnd_toStartOf="@+id/menuBtn"
            app:layout_constraintTop_toTopOf="@+id/menuBtn"
            tools:visibility="visible">

            <TextView
                android:id="@+id/deleteBtn"
                android:layout_width="68dp"
                android:layout_height="27dp"
                android:layout_weight="1"
                android:background="@drawable/round_solid_shape"
                android:backgroundTint="#BDC0D9"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="#F7F7F8"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/saveBtn"
                android:layout_width="68dp"
                android:layout_height="27dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/round_solid_shape"
                android:backgroundTint="#BDC0D9"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="#F7F7F8"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <com.nex3z.flowlayout.FlowLayout
            android:id="@+id/tagContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            app:flChildSpacing="8dp"
            app:flRowSpacing="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
